<?xml version="1.0"?>
<package format="2">
  <name>rviz_hdmap_builder</name>
  <version>0.0.0</version>
  <description>Package to modify ADAS map with Rviz</description>

  <maintainer email="kuriatsubayashi712@gmail.com">kuriatsu</maintainer>

  <license>Apache 2.0</license>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rviz</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rviz plugin="${prefix}/plugin_description.xml"/>　　<!-- 追加 -->
  </export>
</package>
